@@ -1,6 +1,7 @@
 - next version:
   * WebPINewRGB/WebPINewYUVA accept being passed a NULL output buffer
     and will perform auto-allocation.
+  * default filter option is now '-strong -f 60'
 
 - 10/30/12: version 0.2.1
   * Various security related fixes
